samples/_failures_safe/1760959541_5a8e68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae8edd27.c: In function ‘main’:
./samples/SAFE/__tmp_ae8edd27.c:153:12: error: missing terminating " character
  153 |     printf("\nMatrix Addition:\
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ae8edd27.c:153:5: error: expected expression at end of input
  153 |     printf("\nMatrix Addition:\
      |     ^~~~~~
./samples/SAFE/__tmp_ae8edd27.c:153:5: error: expected declaration or statement at end of input
